[package]
name = "check_dns_ng"
version = "0.1.4"
authors = ["Marvin Lee Fimmel <kontakt@ekranos.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.39"
nagiosplugin = "0.4"
structopt = "0.3.21"
trust-dns-client = "0.20.1"
