[package]
name = "check_dns_ng"
version = "0.1.4"
authors = ["Marvin Lee Fimmel <kontakt@ekranos.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
nagiosplugin.workspace = true
trust-dns-client = "0.23"
