[package]
name = "check_http_ng"
version = "0.6.0"
description = "Icinga / Nagios plugin to check HTTP(S) services"
authors = ["Marvin Lee Fimmel <kontakt@ekranos.me>"]
edition = "2021"
repository = "https://github.com/Ekranos/icinga-checks-ng"

[package.metadata.wix]
upgrade-guid = "931FB4EA-B5C5-4A50-9DFC-E09FC6CF1BA1"
path-guid = "323CCB27-F583-4F23-85C4-303B45972B6D"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
derive_more = "0.99.17"
futures.workspace = true
human-time = "0.1.6"
humanize-rs = "0.1.5"
nagiosplugin.workspace = true
regex.workspace = true
reqwest.workspace = true
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing-subscriber.workspace = true
