[package]
name = "check_ssl_ng"
version = "0.1.0"
authors = ["Marvin Lee Fimmel <kontakt@ekranos.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
chrono = "0.4.19"
nagiosplugin = "0.4"
openssl = { version = "0.10.39", features = ["vendored"] }
structopt = "0.3.21"
