[package]
name = "check_ssl_ng"
version = "0.1.0"
authors = ["Marvin Lee Fimmel <kontakt@ekranos.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
nagiosplugin.workspace = true
openssl.workspace = true
