[package]
name = "check_ssl_ng"
version = "0.4.3"
authors = ["Marvin Lee Fimmel <kontakt@ekranos.me>"]
edition = "2021"
repository = "https://github.com/Ekranos/icinga-checks-ng"

[features]
default = ["vendored-openssl"]
vendored-openssl = ["openssl/vendored"]

[package.metadata.wix]
upgrade-guid = "AB709863-D551-477F-988E-DAC8BBFADE6A"
path-guid = "CDA60FA8-2BA6-4FA7-B0F0-32FD935133E2"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
nagiosplugin.workspace = true
openssl.workspace = true
